<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image_BB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="0dp">

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/title"
            android:textSize="@dimen/title"
            android:layout_margin="@dimen/margin"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/bkmark"
            android:layout_width="@dimen/bookmark_60"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_bookmark"
            android:layout_margin="@dimen/margin"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/subtitle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <Button
            android:id="@+id/rentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/rentPrice"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/buyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/buyPrice"
            android:textAllCaps="true" />
    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginVertical="@dimen/margin_2x">

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/ratingBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_edit_24"
             app:tint="@color/white"
             android:layout_marginHorizontal="@dimen/margin_2x"
             android:layout_marginVertical="@dimen/margin"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ratingTxt"/>
     </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/familyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_family"
            app:tint="@color/white"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginVertical="@dimen/margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/tomatoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tomato"
            app:tint="@color/white"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginVertical="@dimen/margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/similarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_similar"
            app:tint="@color/white"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginVertical="@dimen/margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/similar"/>
    </LinearLayout>
</LinearLayout>


    <!-- ESTA VISTA CORRESPONDE A UNA LÍNEA HORIZONTAL -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_divider" />

    <TextView
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:textSize="@dimen/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/description" />

</LinearLayout>