<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_BB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:adjustViewBounds="true"
        android:src="@drawable/header" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_BB"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/title" />

    <ImageButton
        android:id="@+id/bkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/titleTxt"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="@dimen/margin"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_bookmark" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTxt"
        android:layout_margin="@dimen/margin"
        android:text="@string/subtitle" />


    <Button
        android:id="@+id/rentBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin"
        android:layout_weight="0.5"
        android:text="@string/rentPrice"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin"
        android:layout_toEndOf="@id/rentBtn"

        android:layout_weight="0.5"
        android:text="@string/buyPrice"
        android:textAllCaps="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ratingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rentBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@+id/familyBtn"
        android:src="@drawable/ic_baseline_edit_24"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/familyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rentBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@+id/tomatoBtn"
        android:src="@drawable/ic_family"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tomatoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buyBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@+id/similarBtn"
        android:src="@drawable/tomato"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/similarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buyBtn"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:src="@drawable/ic_similar"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/ratingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBtn"
        android:layout_alignBaseline="@id/ratingBtn"
        android:layout_alignStart="@+id/ratingBtn"
        android:layout_alignEnd="@+id/ratingBtn"
        android:text="@string/ratingTxt" />


    <TextView
        android:id="@+id/familyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/familyBtn"
        android:layout_alignBaseline="@id/familyBtn"
        android:layout_alignStart="@+id/familyBtn"
        android:layout_alignEnd="@+id/familyBtn"
        android:text="@string/family" />

    <TextView
        android:id="@+id/tomatoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tomatoBtn"
        android:layout_alignBaseline="@id/similarTxt"
        android:layout_alignStart="@+id/tomatoBtn"
        android:layout_alignEnd="@+id/tomatoBtn"
        android:text="@string/percentage" />

    <TextView
        android:id="@+id/similarTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/similarBtn"
        android:layout_alignStart="@+id/similarBtn"
        android:layout_alignEnd="@+id/similarBtn"
        android:text="@string/similar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/description"
        android:textSize="@dimen/descriptionText" />

</RelativeLayout>