<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_BB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_BB"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_BB" />

    <ImageButton
        android:id="@+id/bkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="148dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/image_BB" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTxt"
        android:layout_margin="@dimen/margin"
        android:text="@string/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />


    <Button
        android:id="@+id/rentBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0.5"
        android:text="@string/rentPrice"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/buyBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/rentBtn"
        android:layout_weight="0.5"
        android:text="@string/buyPrice"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rentBtn"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ratingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rentBtn"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toStartOf="@+id/familyBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/ratingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBtn"
        android:layout_margin="@dimen/margin"
        android:layout_marginTop="8dp"
        android:text="@string/ratingTxt"
        app:layout_constraintEnd_toEndOf="@+id/ratingBtn"
        app:layout_constraintStart_toStartOf="@+id/ratingBtn"
        app:layout_constraintTop_toBottomOf="@+id/ratingBtn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/familyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rentBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/ratingBtn"
        android:src="@drawable/ic_family"
        app:layout_constraintEnd_toStartOf="@+id/tomatoBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ratingBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/familyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/familyBtn"
        android:layout_margin="@dimen/margin"
        android:layout_marginTop="8dp"
        android:text="@string/family"
        app:layout_constraintEnd_toEndOf="@+id/familyBtn"
        app:layout_constraintStart_toStartOf="@+id/familyBtn"
        app:layout_constraintTop_toBottomOf="@+id/familyBtn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tomatoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buyBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/familyBtn"
        android:src="@drawable/tomato"
        app:layout_constraintEnd_toStartOf="@+id/similarBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/familyBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tomatoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tomatoBtn"
        android:layout_alignBaseline="@id/similarTxt"
        android:layout_alignStart="@+id/tomatoBtn"
        android:layout_marginTop="8dp"
        android:text="@string/percentage"
        app:layout_constraintEnd_toEndOf="@+id/tomatoBtn"
        app:layout_constraintStart_toStartOf="@+id/tomatoBtn"
        app:layout_constraintTop_toBottomOf="@+id/tomatoBtn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/similarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buyBtn"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/tomatoBtn"
        android:src="@drawable/ic_similar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tomatoBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:tint="@color/white" />


    <TextView
        android:id="@+id/similarTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/similarBtn"
        android:layout_alignBaseline="@id/similarBtn"
        android:layout_alignStart="@+id/similarBtn"
        android:layout_marginTop="8dp"
        android:text="@string/similar"
        app:layout_constraintEnd_toEndOf="@+id/similarBtn"
        app:layout_constraintStart_toStartOf="@+id/similarBtn"
        app:layout_constraintTop_toBottomOf="@+id/similarBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="358dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/familyTxt"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description"
        android:textSize="@dimen/descriptionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="252dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="354dp" />
</androidx.constraintlayout.widget.ConstraintLayout>